# ai-knowledge-prep

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/backends/documents/: base.py  docling_backend.py  epub_backend.py  marker_backend.py  markitdown_backend.py  mineru_backend.py  pymupdf4llm_backend.py  pymupdf_backend.py
app/backends/transcription/: base.py  faster_whisper_backend.py  whisper_cpp_backend.py
app/infrastructure/: database.py  dependency_checker.py  logging_config.py  paths.py  settings.py  temp_manager.py
app/jobs/: document_jobs.py  job_manager.py  job_model.py  ocr_jobs.py  pdf_jobs.py  progress.py  worker.py
app/models/: conversion_result.py  export_profile.py  extraction_options.py  extraction_result.py  source_document.py  transcription_options.py  transcription_segment.py
app/presets/: __init__.py  base.py  llm_generic.py  notebooklm.py  obsidian.py  transcription_ai.py
app/services/: audio_video_service.py  dependency_service.py  document_prep_service.py  epub_service.py  export_service.py  manifest_service.py  markdown_service.py  ocr_service.py  pdf_render_service.py  pdf_service.py  transcription_service.py
app/tests/: conftest.py  test_backend_selection.py  test_document_prep.py  test_epub_service.py  test_export_service.py  test_manifest_service.py  test_markdown_service.py  test_ocr_jobs.py  test_ocr_service.py  test_pdf_service.py  test_transcription_service.py
app/ui/: batch_view.py  document_prep_view.py  history_view.py  home_view.py  main_window.py  ocr_view.py  pdf_cleaner_view.py  placeholder_view.py  settings_view.py  theme.py  transcription_view.py
app/ui/components/: page_preview.py  reader_splitter.py  thumbnail_grid.py  thumbnail_rail.py
scripts/: setup_windows.ps1
